# pyBroadcast

./: .gitignore  main.py  main.spec  requirements.txt
api/: ibroadcast_api.py  lastfm_api.py  play_queue_websocket.py  queue_cache.py
api/ibroadcast/: ibroadcast_api.py  oauth_callback_handler.py
app/: README.md  pyproject.toml
app/src/: main.py
app/src/api/: ibroadcast_api.py
app/src/audio/: MyBroadcastAudio.py
app/src/ui/: album_header.py  album_track_list.py  artist_header.py  clickable_image.py  library_grid.py  player_controls.py
src/api/: artwork_cache.py  queue_cache.py
src/api/ibroadcast/: database.py  ibroadcast_api.py  models.py  play_queue_socket.py
src/api/lastfm/: lastfm_api.py
src/core/: credentials_manager.py  mpris_manager.py  resource_path.py
src/db/: database_schema.sql
src/ui/album/: album_header.py  (+2 more)
test/: conftest.py  test_api_client.py  test_database.py  test_models.py  test_play_queue_socket.py
ui/: album_detail_view.py  album_header.py  album_track_list.py  artist_header.py  clickable_image.py  context_menus.py  hoverable_widget.py  library_grid.py  options_dialog.py  player_controls.py  playlist_detail_view.py  playlist_header.py  queue_sidebar.py  scrolling_label.py  sidebar_navigation.py
ui/album/: album_detail_view.py  album_header.py
ui/artist/: artist_header.py
ui/grid/: library_grid.py
ui/player/: player_controls.py
ui/playlist/: playlist_detail_view.py  playlist_dialogs.py  playlist_header.py
ui/queue/: queue_sidebar.py
ui/search/: search_header.py
ui/utils/: rounded_image.py  scrolling_label.py
(+16 files in other folders)
