[project]
name = "pyBroadcast"
version = "0.1.0"
description = "A Python iBroadcast player using Flet"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Santiago Rivera", email = "santirivera92@gmail.com" }
]
dependencies = [
  "flet[all]>=0.80.1",
  "flet_audio>=0.80.1",
  "python-dotenv==1.2.1",
  "Requests==2.32.5",
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.1",
]

[tool.flet]
org = "top.excavate"
product = "pyBroadcast"
company = "Excavate"
copyright = "Copyright (C) 2026 by Excavate"

[tool.flet.app]
path = "src"

[tool.flet.flutter.dependencies]
flet_audio = "0.80.1"